--- a/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
@@ -142,7 +142,7 @@
                            <Insets />
                         </StackPane.margin>
                      </HBox>
-                          <HBox fx:id="overlaysTeamLives" alignment="CENTER_RIGHT" blendMode="MULTIPLY" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
+                          <HBox fx:id="overlaysTeamLivesGameView" alignment="CENTER_RIGHT" blendMode="MULTIPLY" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
                               <children>
                            <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
                            <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
@@ -274,6 +274,149 @@
                            <Insets />
                         </StackPane.margin>
                       </FlowPane>
+                  </children>
+                  <GridPane.margin>
+                     <Insets right="15.0" />
+                  </GridPane.margin>
+               </StackPane>
+            </children>
+         </GridPane>
+         <GridPane fx:id="topPanelWaitingView" prefHeight="80.0" prefWidth="1280.0">
+            <columnConstraints>
+               <ColumnConstraints halignment="LEFT" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="165.0" />
+               <ColumnConstraints halignment="LEFT" minWidth="-Infinity" prefWidth="795.0" />
+               <ColumnConstraints halignment="RIGHT" minWidth="-Infinity" prefWidth="320.0" />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+               <ImageView pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../images/FrizzbeeFreakz_Logo_TopPanel.png" />
+                  </image>
+                  <GridPane.margin>
+                     <Insets left="10.0" />
+                  </GridPane.margin>
+               </ImageView>
+               <HBox alignment="CENTER_LEFT" prefHeight="80.0" spacing="40.0" GridPane.columnIndex="1">
+                  <children>
+                     <VBox alignment="CENTER_LEFT">
+                        <children>
+                           <Label text="YOUR TEAM" textFill="WHITE">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <Label fx:id="labelTeamNameWaitingView" textFill="WHITE">
+                              <font>
+                                 <Font size="24.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER_LEFT">
+                        <children>
+                           <Label text="YOUR LEVEL" textFill="WHITE">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <Label fx:id="labelLevelWaitingView" alignment="TOP_CENTER" textFill="WHITE">
+                              <font>
+                                 <Font size="24.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER_LEFT">
+                        <children>
+                           <Label text="YOUR TIME REMAINING" textFill="WHITE">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <Label fx:id="labelCountdownWaitingView" alignment="TOP_CENTER" textFill="WHITE">
+                              <font>
+                                 <Font size="24.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER_LEFT">
+                        <children>
+                           <Label text="YOUR CURRENT SCORE" textFill="WHITE">
+                              <font>
+                                 <Font size="14.0" />
+                              </font>
+                           </Label>
+                           <Label fx:id="labelScoreWaitingView" alignment="TOP_CENTER" textFill="WHITE">
+                              <font>
+                                 <Font size="24.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
+                  </children>
+               </HBox>
+               <StackPane alignment="CENTER_RIGHT" GridPane.columnIndex="2">
+                  <children>
+                     <HBox alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
+                        <children>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="90.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="160.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="200.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                        </children>
+                        <opaqueInsets>
+                           <Insets />
+                        </opaqueInsets>
+                        <padding>
+                           <Insets left="10.0" />
+                        </padding>
+                        <StackPane.margin>
+                           <Insets />
+                        </StackPane.margin>
+                     </HBox>
+                     <HBox fx:id="overlaysTeamLivesWaitingView" alignment="CENTER_RIGHT" blendMode="MULTIPLY" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
+                        <children>
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                        </children>
+                        <padding>
+                           <Insets left="10.0" />
+                        </padding>
+                        <opaqueInsets>
+                           <Insets />
+                        </opaqueInsets>
+                        <StackPane.margin>
+                           <Insets />
+                        </StackPane.margin>
+                     </HBox>
                   </children>
                   <GridPane.margin>
                      <Insets right="15.0" />
