--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
-      <VBox alignment="CENTER" layoutY="240.0" prefWidth="1280.0">
+      <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
          <children>
-            <Text fx:id="startText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dialog-text" text="Warte auf das zweite Monster, um das Spiel zu beginnen ..." />
+            <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <VBox alignment="CENTER" prefWidth="1280.0" stylesheets="@../css/main.css">
+               <children>
+                  <Label stylesheets="@../css/main.css" text="Please wait … the second freak will show up soon.">
+                     <VBox.margin>
+                        <Insets bottom="40.0" />
+                     </VBox.margin>
+                     <styleClass>
+                        <String fx:value="dialog-text" />
+                        <String fx:value="dialog-h1" />
+                     </styleClass>
+                  </Label>
+                  <ImageView fx:id="frisbee" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/frisbee01_640px.png" />
+                     </image>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </ImageView>
+                  <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#handleButtonStartClicked" styleClass="button-light" stylesheets="@../css/main.css" text="Let's get it started!">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
          </children>
-      </VBox>
-      <VBox alignment="CENTER" layoutY="420.0" prefWidth="1280.0" spacing="20.0">
-         <children>
-            <Button fx:id="startButton" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Los geht's!" />
-            <Button mnemonicParsing="false" onAction="#handleButtonQuitGameClicked" stylesheets="@../css/main.css" text="Quit Game" />
-         </children>
-      </VBox>
-      <VBox alignment="CENTER" layoutY="310.0" prefHeight="90.0" prefWidth="1280.0">
-         <children>
-            <ImageView fx:id="frisbee" fitHeight="97.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/frisbee01.png" />
-               </image>
-            </ImageView>
-         </children>
-      </VBox>
+      </StackPane>
+      <fx:include fx:id="topPanel" source="TopPanel.fxml" />
+      <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
