--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -19,28 +19,37 @@
             <Rectangle blendMode="MULTIPLY" height="600.0" opacity="0.4" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <VBox alignment="CENTER" prefWidth="1280.0" stylesheets="@../css/main.css">
                <children>
-                  <Label stylesheets="@../css/main.css" text="Please wait … the second freak will show up soon.">
+                  <Label stylesheets="@../css/main.css" text="PLEASE WAIT!">
+                     <styleClass>
+                        <String fx:value="dialog-text" />
+                        <String fx:value="dialog-game-over" />
+                     </styleClass>
                      <VBox.margin>
                         <Insets bottom="40.0" />
                      </VBox.margin>
+                  </Label>
+                  <Label stylesheets="@../css/main.css" text="The second freak will show up soon.">
                      <styleClass>
                         <String fx:value="dialog-text" />
                         <String fx:value="dialog-h1" />
                      </styleClass>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </Label>
-                  <ImageView fx:id="frisbee" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/frisbee01_640px.png" />
-                     </image>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </ImageView>
-                  <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#handleButtonStartClicked" styleClass="button-light" stylesheets="@../css/main.css" text="Let's get it started!">
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </Button>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <ImageView fx:id="frisbee" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/frisbee01_640px.png" />
+                           </image>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </ImageView>
+                        <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#handleButtonStartClicked" styleClass="button-light" stylesheets="@../css/main.css" text="Let's get it started!" />
+                     </children>
+                  </VBox>
                </children>
             </VBox>
          </children>
