--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -42,6 +42,15 @@
                         <Insets bottom="40.0" />
                      </VBox.margin>
                   </Label>
+                  <Label fx:id="playerGreeting" stylesheets="@../css/main.css">
+                     <styleClass>
+                        <String fx:value="dialog-text" />
+                        <String fx:value="dialog-h1" />
+                     </styleClass>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                  </Label>
                   <Label stylesheets="@../css/main.css" text="The second freak will show up soon.">
                      <styleClass>
                         <String fx:value="dialog-text" />
